--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -14,8 +14,9 @@ $orange:            #FB9C50;
 $slate:             #3D4260;
 $blue:              #2568A3;
 $catred:            #BF1827;
+$material:          #3f51b5;
 
-$primary-color:     $slate;
+$primary-color:     $material;
 $secondary-color:   #5BA4E5;
 
 $link-color:        $primary-color;
