add extra images and logos

--- a/business/css/style.css
+++ b/business/css/style.css
@@ -161,7 +161,7 @@ p {
 
 .navStyle ul li a {
     display: block;
-    font-size: 14px;
+    font-size: 18px;
     color: #222222;
     font-family: 'Raleway', sans-serif;
     text-decoration: none;
@@ -248,6 +248,15 @@ p {
     margin: 0 0 20px 0;
     text-align: left;
     font-weight: 700;
+}
+
+.top_left_cont h1 {
+    font-size: 50px;
+    color: #E85C63;
+    line-height: 52px;
+    margin: 0 0 26px 0;
+    text-align: center;
+    font-weight: 800;
 }
 
 .top_left_cont h2 {
